2015-01-13  Pat Haugen  <pthaugen@us.ibm.com>

	Backport from mainline
	2014-12-20  Segher Boessenkool  <segher@kernel.crashing.org>

	PR target/64358
	* config/rs6000/rs6000.c (rs6000_split_logical_inner): Swap the
	input operands if only the second is inverted.
	* config/rs6000/rs6000.md (*boolc<mode>3_internal1 for BOOL_128):
	Swap BOOL_REGS_OP1 and BOOL_REGS_OP2.  Correct arguments to
	rs6000_split_logical.
	(*boolc<mode>3_internal2 for TI2): Swap operands[1] and operands[2].

2015-01-13  Oleg Endo  <olegendo@gcc.gnu.org>

	Backport form mainline
	2015-01-13  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/64479
	* rtlanal.c (set_reg_p): Handle SEQUENCE constructs.

2014-12-27  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:
	2014-12-27  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/64409
	* config/i386/i386.c (ix86_function_type_abi): Issue an error
	when ms_abi attribute is used with x32.

2014-12-19  H.J. Lu  <hongjiu.lu@intel.com>

	Backported from mainline
	2014-12-14  H.J. Lu  <hongjiu.lu@intel.com>

	PR rtl-optimization/64037
	* combine.c (setup_incoming_promotions): Pass the argument
	before any promotions happen to promote_function_mode.

2014-12-19  Jakub Jelinek  <jakub@redhat.com>

	* BASE-VER: Set to 4.8.5.
	* DEV-PHASE: Set to prerelease.

2014-12-19  Release Manager

	* GCC 4.8.4 released.

2014-12-18  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>

	Backport from trunk.
	PR fortran/61407
	* config/darwin-c.c (version_as_macro): Added extra 0 for OS X 10.10
	and above.
	* config/darwin-driver.c (darwin_find_version_from_kernel): Removed
	kernel version check to avoid incrementing it after every major OS X
	release.
	(darwin_default_min_version): Avoid static memory buffer.

2014-12-15  Jakub Jelinek  <jakub@redhat.com>

	PR sanitizer/64265
	* tsan.c (instrument_func_entry): Insert __tsan_func_entry
	call on edge from entry block to single succ instead
	of after labels of single succ of entry block.
