@@ -1,3 +1,10 @@
+2015-01-15  Richard Biener  <rguenther@suse.de>
+	    Martin Liska  <mliska@suse.cz>
+
+	PR middle-end/63704
+	* alias.c (mems_in_disjoint_alias_sets_p): Remove assert
+	and instead return false when !fstrict-aliasing.
+
 2015-01-13  Pat Haugen  <pthaugen@us.ibm.com>
 
 	Backport from mainline
